# boundary-amd-private-agent

./: .env.example  .gitignore  README.md  boundary-update.bundle  package-lock.json  package.json
agent/: README.md  __init__.py
agent/audit/: __init__.py
agent/executor/: __init__.py
agent/memory/: __init__.py
agent/permissions/: __init__.py
agent/planner/: __init__.py
agent/retrieval/: __init__.py
agent/tools/: __init__.py
backend/: pyproject.toml
backend/src/boundary_backend/: __init__.py  config.py  local_model.py  main.py  models.py  policy.py  workflow.py
backend/tests/: test_health.py  test_local_model.py  test_model_api.py  test_policy.py  test_workflow.py
benchmarks/: README.md
benchmarks/environment/: .gitignore
demo-data/: README.md  sample-task.json
docs/: architecture.md  development.md  radeon-cloud.md
frontend/: README.md  package.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/boundary/[...segments]/: route.ts
frontend/components/: confirmation-dialog.tsx  control-center.tsx  risk-badge.tsx
frontend/lib/: api.ts  health.ts  types.ts
frontend/lib/server/: backend-proxy.ts
frontend/tests/: control-center.test.tsx  health.test.js  proxy-and-api.test.ts
scripts/: start-backend.ps1  start-frontend.ps1
scripts/cloud/: check-vllm.sh  run-backend.sh  run-frontend.sh  setup-backend.sh  test-live-approval-flow.sh  test-live-audit-chain.sh  test-live-permission-policy.sh  test-live-plan.sh  test-scripts.sh  verify-rocm.sh
